--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rusqlite = { version = "0.28.0", features = ["bundled"] }
+rusqlite = { version = "^0.24.1", features = ["bundled"] }
 chrono = "0.4"
 rand = "0.5"
+rocket = "0.5.0-rc.2"
+
+[dependencies.rocket_db_pools]
+version = "0.1.0-rc.2"
+features = ["sqlx_sqlite"]
