--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,12 @@ rusqlite = { version = "^0.24.1", features = ["bundled"] }
 chrono = "0.4"
 rand = "0.5"
 rocket = "0.5.0-rc.2"
+serde = "1.0"
 
 [dependencies.rocket_db_pools]
 version = "0.1.0-rc.2"
 features = ["sqlx_sqlite"]
+
+[dependencies.rocket_dyn_templates]
+version = "0.1.0-rc.2"
+features = ["handlebars", "tera"]
