--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: ['master']
   pull_request:
-    branches: [ "master" ]
+    branches: ['master']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,4 +27,6 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ./$GITHUB_WORKSPACE/build/build.sh
+        run: |
+          cd $GITHUB_WORKSPACE
+          ./build/build.sh
