--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,4 +29,5 @@ jobs:
       - name: Run a one-line script
         run: |
           cd $GITHUB_WORKSPACE
-          ./build/build.sh
+          docker buildx create --use
+          docker buildx build --push --platform=linux/amd64,linux/arm64 -t diericx/cronic:latest -t "diericx/cronic:$(git rev-parse HEAD)" -f ./build/Dockerfile .
